0024601: Unwanted spheres shown after Step-Import

Add check for outer boundary before creating wire from Vertex Loop on spheres.
Test case for issue CR24601